ECOPROJECT-4565 | feat: added a cluster specific utilization route
This PR adds an API that exposes the utilization data for a specific cluster for a specific (or latest) utilization report


# Conflicts:
#	api/v1/openapi.yaml
